# excel-anon-tool

./: LICENSE  README
.github/: dependabot.yml
python/: .gitignore  Dockerfile  main.py  pyproject.toml
python/prm/: Technical Documentation.docx  runtime_hook.py
python/prm/data/breast/differetial_p_arguments/Lab_Results/: breast.txt
python/prm/data/colorectal/differetial_p_arguments/General_info/: colorectal.txt
python/prm/data/colorectal/differetial_p_arguments/Timepoints/: colorectal.txt
python/prm/data/colorectal/differetial_p_arguments/Treatment/: colorectal.txt
python/prm/data/lung/differetial_p_arguments/General_info/: lung.txt
python/prm/data/prostate/differetial_p_arguments/Treatment/: prostate.txt
python/prm/samples/valab/data/: Breast_Cancer.xls  Breast_Cancer_anonymized.xls
python/prm/templates/: Breast_Template.xlsx  Colorectal_Template.xlsx  Lung_Template.xlsx  Prostate_Template.xlsx
python/python/: main.py  pyproject.toml
python/python/prm/data/breast/differetial_p_arguments/Histology_Mutations/: breast.txt
python/python/prm/data/breast/differetial_p_arguments/Timepoints/: breast.txt
python/python/prm/data/breast/differetial_p_arguments/Treatment/: breast.txt
python/python/prm/data/colorectal/differetial_p_arguments/Histology_Mutations/: colorectal.txt
python/python/prm/data/lung/differetial_p_arguments/Histology_Mutations/: lung.txt
python/python/prm/data/lung/differetial_p_arguments/Treatment/: lung.txt
python/python/prm/samples/valab/data/: Breast_Cancer.xls  Breast_Cancer_anonymized.xls  id_mapping_breast.json
(+3 files in other folders)
