[project]
dependencies = [
  "fire==0.6.0",
  "openpyxl==3.1.2",
  "pandas==2.1.3",
  "xlrd==2.0.1",
  "xlsxwriter==3.2.0"
]
name = "anonymize-excel"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.4.4",
  "djlint==1.34.1",
  "mypy==1.9.0",
  "ruff==0.5.0",
  "ssort==0.12.4",
  "toml-sort==0.23.1"
]

[project.scripts]
anonymize-excel = "main:main"

[tool.setuptools]
py-modules = ["main"]
